--- a/main/index.html
+++ b/main/index.html
@@ -591,9 +591,9 @@
                                 </select>
                             </td>
                             <td data-label="电机控制" class="btn-group">
-                                <button class="btn primary" onclick="sendCommand('motor_forward',1)">进料</button>
-                                <button class="btn warning" onclick="sendCommand('motor_backward',1)">退料</button>
-                                <button class="btn success" onclick="sendCommand('load_filament',1)">上料</button>
+                                <button class="btn primary" onclick="sendCommand('motor_forward',1)">正转</button>
+                                <button class="btn warning" onclick="sendCommand('motor_backward',1)">反转</button>
+                                <button class="btn success" onclick="sendCommand('load_filament',1)">装载</button>
                             </td>
                         </tr>
                         <tr>
@@ -614,9 +614,9 @@
                                 </select>
                             </td>
                             <td data-label="电机控制" class="btn-group">
-                                <button class="btn primary" onclick="sendCommand('motor_forward',2)">进料</button>
-                                <button class="btn warning" onclick="sendCommand('motor_backward',2)">退料</button>
-                                <button class="btn success" onclick="sendCommand('load_filament',2)">上料</button>
+                                <button class="btn primary" onclick="sendCommand('motor_forward',2)">正转</button>
+                                <button class="btn warning" onclick="sendCommand('motor_backward',2)">反转</button>
+                                <button class="btn success" onclick="sendCommand('load_filament',2)">装载</button>
 
                             </td>
                         </tr>
@@ -638,9 +638,9 @@
                                 </select>
                             </td>
                             <td data-label="电机控制" class="btn-group">
-                                <button class="btn primary" onclick="sendCommand('motor_forward',3)">进料</button>
-                                <button class="btn warning" onclick="sendCommand('motor_backward',3)">退料</button>
-                                <button class="btn success" onclick="sendCommand('load_filament',3)">上料</button>
+                                <button class="btn primary" onclick="sendCommand('motor_forward',3)">正转</button>
+                                <button class="btn warning" onclick="sendCommand('motor_backward',3)">反转</button>
+                                <button class="btn success" onclick="sendCommand('load_filament',3)">装载</button>
 
                             </td>
                         </tr>
@@ -662,9 +662,9 @@
                                 </select>
                             </td>
                             <td data-label="电机控制" class="btn-group">
-                                <button class="btn primary" onclick="sendCommand('motor_forward',4)">进料</button>
-                                <button class="btn warning" onclick="sendCommand('motor_backward',4)">退料</button>
-                                <button class="btn success" onclick="sendCommand('load_filament',4)">上料</button>
+                                <button class="btn primary" onclick="sendCommand('motor_forward',4)">正转</button>
+                                <button class="btn warning" onclick="sendCommand('motor_backward',4)">反转</button>
+                                <button class="btn success" onclick="sendCommand('load_filament',4)">装载</button>
                             </td>
                         </tr>
                         <tr>
@@ -685,9 +685,9 @@
                                 </select>
                             </td>
                             <td data-label="电机控制" class="btn-group">
-                                <button class="btn primary" onclick="sendCommand('motor_forward',5)">进料</button>
-                                <button class="btn warning" onclick="sendCommand('motor_backward',5)">退料</button>
-                                <button class="btn success" onclick="sendCommand('load_filament',5)">上料</button>
+                                <button class="btn primary" onclick="sendCommand('motor_forward',5)">正转</button>
+                                <button class="btn warning" onclick="sendCommand('motor_backward',5)">反转</button>
+                                <button class="btn success" onclick="sendCommand('load_filament',5)">装载</button>
 
                             </td>
                         </tr>
@@ -709,9 +709,9 @@
                                 </select>
                             </td>
                             <td data-label="电机控制" class="btn-group">
-                                <button class="btn primary" onclick="sendCommand('motor_forward',6)">进料</button>
-                                <button class="btn warning" onclick="sendCommand('motor_backward',6)">退料</button>
-                                <button class="btn success" onclick="sendCommand('load_filament',6)">上料</button>
+                                <button class="btn primary" onclick="sendCommand('motor_forward',6)">正转</button>
+                                <button class="btn warning" onclick="sendCommand('motor_backward',6)">反转</button>
+                                <button class="btn success" onclick="sendCommand('load_filament',6)">装载</button>
                             </td>
                         </tr>
                         <tr>
@@ -732,9 +732,9 @@
                                 </select>
                             </td>
                             <td data-label="电机控制" class="btn-group">
-                                <button class="btn primary" onclick="sendCommand('motor_forward',7)">进料</button>
-                                <button class="btn warning" onclick="sendCommand('motor_backward',7)">退料</button>
-                                <button class="btn success" onclick="sendCommand('load_filament',7)">上料</button>
+                                <button class="btn primary" onclick="sendCommand('motor_forward',7)">正转</button>
+                                <button class="btn warning" onclick="sendCommand('motor_backward',7)">反转</button>
+                                <button class="btn success" onclick="sendCommand('load_filament',7)">装载</button>
                             </td>
                         </tr>
                         <tr>
@@ -755,9 +755,9 @@
                                 </select>
                             </td>
                             <td data-label="电机控制" class="btn-group">
-                                <button class="btn primary" onclick="sendCommand('motor_forward',8)">进料</button>
-                                <button class="btn warning" onclick="sendCommand('motor_backward',8)">退料</button>
-                                <button class="btn success" onclick="sendCommand('load_filament',8)">上料</button>
+                                <button class="btn primary" onclick="sendCommand('motor_forward',8)">正转</button>
+                                <button class="btn warning" onclick="sendCommand('motor_backward',8)">反转</button>
+                                <button class="btn success" onclick="sendCommand('load_filament',8)">装载</button>
                             </td>
                         </tr>
                     </tbody>
