fix: input valude sync fail

--- a/main/index.html
+++ b/main/index.html
@@ -607,8 +607,8 @@
                                 <input type="number" id="load_time_1" value="0" min="0"
                         onchange="sendKeyValue('load_time_1', this.value)">
                             </td>
-                            <td data-label="退料时间" class="time-input" id="uload_time_1">
-                                <input type="number" value="0" min="0"
+                            <td data-label="退料时间" class="time-input">
+                                <input type="number" id="uload_time_1" value="0" min="0"
                         onchange="sendKeyValue('uload_time_1', this.value)">
                             </td>
                         </tr>
@@ -639,8 +639,8 @@
                                 <input type="number" id="load_time_2" value="0" min="0"
                         onchange="sendKeyValue('load_time_2', this.value)">
                             </td>
-                            <td data-label="退料时间" class="time-input" id="uload_time_2">
-                                <input type="number" value="0" min="0"
+                            <td data-label="退料时间" class="time-input">
+                                <input type="number" id="uload_time_2" value="0" min="0"
                         onchange="sendKeyValue('uload_time_2', this.value)">
                             </td>
                         </tr>
@@ -734,8 +734,8 @@
                                 <input type="number" id="load_time_5" value="0" min="0"
                         onchange="sendKeyValue('load_time_5', this.value)">
                             </td>
-                            <td data-label="退料时间" class="time-input" id="uload_time_5">
-                                <input type="number" value="0" min="0"
+                            <td data-label="退料时间" class="time-input">
+                                <input type="number" id="uload_time_5" value="0" min="0"
                         onchange="sendKeyValue('uload_time_5', this.value)">
                             </td>
                         </tr>
@@ -939,41 +939,49 @@
                             break;
                         case 'uload_time':
                             document.getElementById('uload_time').value = item.value;
+                            break;
                         case 'load_time_1':
                             document.getElementById('load_time_1').value = item.value;
                             break;
                         case 'uload_time_1':
                             document.getElementById('uload_time_1').value = item.value;
+                            break;
                         case 'load_time_2':
                             document.getElementById('load_time_2').value = item.value;
                             break;
                         case 'uload_time_2':
                             document.getElementById('uload_time_2').value = item.value;
+                            break;
                         case 'load_time_3':
                             document.getElementById('load_time_3').value = item.value;
                             break;
                         case 'uload_time_3':
                             document.getElementById('uload_time_3').value = item.value;
+                            break;
                         case 'load_time_4':
                             document.getElementById('load_time_4').value = item.value;
                             break;
                         case 'uload_time_4':
                             document.getElementById('uload_time_4').value = item.value;
+                            break;
                         case 'load_time_5':
                             document.getElementById('load_time_5').value = item.value;
                             break;
                         case 'uload_time_5':
                             document.getElementById('uload_time_5').value = item.value;
+                            break;
                         case 'load_time_6':
                             document.getElementById('load_time_6').value = item.value;
                             break;
                         case 'uload_time_6':
                             document.getElementById('uload_time_6').value = item.value;
+                            break;
                         case 'load_time_7':
                             document.getElementById('load_time_7').value = item.value;
                             break;
                         case 'uload_time_7':
                             document.getElementById('uload_time_7').value = item.value;
+                            break;
                         case 'load_time_8':
                             document.getElementById('load_time_8').value = item.value;
                             break;
