feat: support 8 channel & css update

--- a/main/index.html
+++ b/main/index.html
@@ -64,7 +64,7 @@
         }
 
         .control-panel {
-            max-width: 1100px;
+            max-width: 1150px;
             margin: 24px auto;
             background: var(--card-bg);
             border-radius: var(--border-radius);
@@ -685,6 +685,12 @@
                 <button class="btn primary" onclick="sendCommand('motor_forward',${ch.id})">正转</button>
                 <button class="btn warning" onclick="sendCommand('motor_backward',${ch.id})">反转</button>
                 <button class="btn success" onclick="sendCommand('load_filament',${ch.id})">装载</button>
+            </td>
+            <td data-label="进料时间" class="time-input">
+                <input type="number" id="load_time_${ch.id}" value="0" min="0" onchange="sendKeyValue('load_time_${ch.id}', this.value)">
+            </td>
+            <td data-label="退料时间" class="time-input">
+                <input type="number" id="uload_time_${ch.id}" value="0" min="0" onchange="sendKeyValue('uload_time_${ch.id}', this.value)">
             </td>
         </tr>
     `;
